static/css/base.css
html {
  height: 100%;
}

body {
  background-color: #fff7ec;
  height: auto;
  font-family: "Lato", Arial, Helvetica;
  position: relative; /* Important for absolute positioning of background */
  color: #1f1f1f;
}

.title {
  font-family: "Lobster", Arial, Helvetica;
  color: #a67c00 !important;
  size: 3rem;
}
.header-container {
  position: relative;
}

.icon {
  align-items: center;
  display: inline-flex;
  justify-content: center;
  width: 1.5rem;
}

/* .main-logo-link {
  width: fit-content;
}
*/

.shop-now-button {
  background: black;
  color: white;
  min-width: 260px;
}

.btn-black {
  background: black;
  color: white;
}

.shop-now-button:hover,
.shop-now-button:active,
.shop-now-button:focus,
.btn-black:hover,
.btn-black:active,
.btn-black:focus {
  background: #222;
  color: white;
}

.text-black {
  color: #1f1f1f !important;
}

.border-black {
  border: 1px solid black !important;
}

.desktop-header .row {
  display: flex; /* Ensure row is a flex container */
  align-items: center; /* Vertically center content */
  width: 100%; /* Important: Make sure the row takes full width of container */
  max-width: 100%; /* Prevent row from exceeding container width */
}

/* -------------------------------- Media Queries */

/* Slightly larger container on xl screens  */
@media (min-width: 1200px) {
  .container {
    max-width: 80%;
  }
}

/* fixed top navbar only on medium and up */
@media (min-width: 992px) {
  .fixed-top-desktop-only {
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: 1030;
  }

  body {
    padding-top: 164px;
  }
}

@media (max-width: 991px) {
  .desktop-header {
    display: none; /* Ensure desktop header is hidden */
  }
  .mobile-header {
    display: flex; /* Ensure mobile header is visible */
  }
}

@media (min-width: 992px) {
  .desktop-header {
    display: flex; /* Ensure desktop header is visible */
  }
  .mobile-header {
    display: none; /* Ensure mobile header is hidden */
  }
}

/* -------------------------------- Search Bar */

.button {
  display: inline-block;
  margin: 4px 2px;
  font-size: 14px;
  padding-left: 32px;
  padding-right: 32px;
  height: 50px;
  line-height: 50px;
  text-align: center;
  text-decoration: none;
  cursor: pointer;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.button:hover,
.gold:hover {
  transition-duration: 0.4s;
  -moz-transition-duration: 0.4s;
  -webkit-transition-duration: 0.4s;
  -o-transition-duration: 0.4s;
  color: #a67c00;
}

.search-container {
  position: relative;
  display: inline-block;
  margin: 4px 2px;
  height: 50px;
  width: 50px;
  vertical-align: bottom;
}

.searchbutton {
  position: absolute;
  font-size: 22px;
  width: 100%;
  margin: 0;
  padding: 0;
}

.search:focus + .searchbutton {
  transition-duration: 0.4s;
  -moz-transition-duration: 0.4s;
  -webkit-transition-duration: 0.4s;
  -o-transition-duration: 0.4s;
}

.search {
  position: absolute;
  left: 49px; /* Button width-1px (Not 50px/100% because that will sometimes show a 1px line between the search box and button) */
  outline: none;
  border: none;
  border-bottom: 2px solid #1f1f1f;
  padding: 0;
  width: 0;
  height: 100%;
  z-index: 10;
  transition-duration: 0.4s;
  -moz-transition-duration: 0.4s;
  -webkit-transition-duration: 0.4s;
  -o-transition-duration: 0.4s;
  color: #1f1f1f;
  background-color: #fff7ec;
}

.search:focus {
  width: 363px; /* Bar width+1px */
  padding: 0 16px 0 0;
}

.expandright {
  left: auto;
  right: 49px; /* Button width-1px */
}

.expandright:focus {
  padding: 0 0 0 16px;
}

/* -------------------------------- Nav Drop Downs */

.navbar {
  padding-top: 50px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}
nav {
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}

nav .col {
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}

.cursor-hover {
  cursor: pointer;
}

/* -------------------------------- page divider */

.center-diamond {
  border: 0;
  height: 1px;
  width: 55%;
  position: relative;
  margin: 30px auto;
  background: #bc0500;
}
.center-diamond:before {
  content: "";
  width: 6px;
  height: 6px;
  background: #bc0500;
  display: inline-block;
  border: 2px solid #bc0500;
  position: absolute;
  top: -3px; /* -1/2 diamond size */
  left: 50%;
  margin-left: -3px; /* -1/2 diamond size */
  transform: rotate(45deg);
}

